force-app/main/default/objects/WRDB_BestMatch_Colums__mdt/WRDB_BestMatch_Colums__mdt.object-meta.xml
<CustomObject>
    <label>WRDB BestMatch Columns</label>
    <pluralLabel>WRDB BestMatches Columns</pluralLabel>
</CustomObject>