force-app/main/default/objects/WRDB_BestMatch_Colums__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <label>FieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>